AC_PREREQ([2.69])     # Version of autoconf required
AC_INIT([YourProject], [1.0], [your@email.com])  # Replace with your project details
AM_INIT_AUTOMAKE([foreign])  # Set up Automake

# Check for required tools
AC_PROG_CC  # Check for C compiler
AC_PROG_CXX  # Check for C++ compiler
AC_CHECK_LIB([m], [main])  # Check for math library (example)

# Check for other dependencies or libraries if needed
# AC_CHECK_HEADER([some_header.h])

AC_CONFIG_FILES([Makefile])  # Specify Makefile generation
AC_OUTPUT  # Generate the configure script
 
